--- a/ci/playbook.yml
+++ b/ci/playbook.yml
@@ -19,24 +19,24 @@
     - name: 3. Sincronizando archivos del proyecto
       ansible.posix.synchronize:
         src: "../"
-        dest: "{{ project_path }}/"               
+        dest: "{{ project_path }}"               
         rsync_opts:
           - "--exclude=.git"
           - "--exclude=.venv"              
     
-    - name: 5. Copiando el archivo docker-compose.prod.yml desde Jenkins al servidor
+    - name: 4. Copiando el archivo docker-compose.prod.yml desde Jenkins al servidor
       ansible.posix.synchronize:        
         src: "{{ compose_file }}" 
         dest: "{{ project_path }}/docker-compose.prod.yml"
 
-    - name: 6 Administrando red de Docker
+    - name: 5. Administrando red de Docker
       community.docker.docker_network:
         name: cunori2026
         driver: bridge
         ipam_config:
           - subnet: 192.168.100.0/24        
 
-    - name: 7. Levantar la infraestructura con Docker Compose
+    - name: 6. Levantar la infraestructura con Docker Compose
       community.docker.docker_compose_v2:
         project_src: "{{ project_path }}"
         files:
